上传图片逻辑简化
